# namtsop

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http.rs  lib.rs  main.rs  storage.rs
src/components/: CodeEditor.tsx  EnvVarsModal.tsx  HistoryPanel.tsx  KeyValueEditor.tsx  MenuBar.tsx  RequestPanel.tsx  ResponsePanel.tsx  ScratchEditor.tsx  Sidebar.tsx
src/lib/: api.ts  format.ts  vars.ts
